--- a/src/css/style.css
+++ b/src/css/style.css
@@ -92,9 +92,9 @@ a {
 }
 
 .main {
-  background: #021402;
+ background: #021402;
   background: linear-gradient(96.96deg, rgba(0, 0, 0, 0.68) 4.69%,
-      rgba(0, 0, 0, 0) 99.28%), url("../../docs/img/imgBG.jpg") no-repeat;
+      rgba(0, 0, 0, 0) 99.28%), url("../img/imgBG.jpg") no-repeat;
   color: #fff;
 }
 
@@ -559,7 +559,7 @@ a {
 .feedback {
   background: #021402;
   background: linear-gradient(0deg, rgba(17, 29, 10, 0.69),
-      rgba(17, 29, 10, 0.69)), url("../../docs/img/phuket-1432886.jpg") no-repeat;
+      rgba(17, 29, 10, 0.69)), url("../img/phuket-1432886.jpg") no-repeat;
   background-position: 50% 50%;
   background-size: cover;
 }
@@ -740,7 +740,7 @@ a {
 .footer {
   background: #021402;
   background: linear-gradient(0deg, rgba(44, 56, 37, 0.74), rgba(44, 56, 37, 0.74)),
-    url("../../docs/img/imgGreenLeaves.jpg") no-repeat;
+    url("../img/imgGreenLeaves.jpg") no-repeat;
   background-size: cover;
   width: 100%;
   height: 420px;
@@ -907,13 +907,13 @@ a {
 }
 
 .contacts .work-time li:first-child::before {
-  content: url('../../docs/icons/iconLocation.svg');
+  content: url('../icons/iconLocation.svg');
   width: 22px;
   height: 30px;
 }
 
 .contacts .work-time li:nth-child(2)::before {
-  content: url('../../docs/icons/iconWhatsApp.svg');
+  content: url('../icons/iconWhatsApp.svg');
   width: 22px;
   height: 22px;
   top: 50%;
@@ -922,7 +922,7 @@ a {
 }
 
 .contacts .work-time li:last-child::before {
-  content: url('../../docs/icons/iconClock.svg');
+  content: url('../icons/iconClock.svg');
   width: 22px;
   height: 22px;
 }
@@ -1159,9 +1159,9 @@ a {
 @media (min-width: 577px) and (max-width: 1299px) {
   .main {
     background: linear-gradient(0deg, rgba(0, 0, 0, 0.58), rgba(0, 0, 0, 0.58)),
-      url("../../docs/img/imgBG.jpg") no-repeat;
+      url("../img/imgBG.jpg") no-repeat;
   }
-}
+} 
 
 @media (min-width: 577px) and (max-width: 1099px) {
 
@@ -1770,7 +1770,7 @@ a {
 
   .main {
     background: linear-gradient(0deg, rgba(0, 0, 0, 0.58), rgba(0, 0, 0, 0.58)),
-      url("../../docs/img/imgBG.jpg") no-repeat;
+      url("../img/imgBG.jpg") no-repeat;
     background-position: 36% 50%;
     max-height: 530px;
   }
@@ -1798,7 +1798,7 @@ a {
   .main .navbar {
     background: #021402;
     background: linear-gradient(0deg, rgba(0, 0, 0, 0.75), rgba(0, 0, 0, 0.75)),
-      url("../../docs/img/imgBG.jpg");
+      url("../img/imgBG.jpg");
     position: fixed;
     display: block;
     left: 0;
